compatibility with pages

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link href="https://cdn.jsdelivr.net/npm/remixicon@3.7.0/fonts/remixicon.css" rel="stylesheet">
 
         <!--===================== CSS =====================-->
-        <link rel="stylesheet" href="assets/css/styles.css">
+        <link rel="stylesheet" href="styles.css">
 
         <title>I miss you - Mercy ❤️</title>
     </head>
@@ -26,8 +26,8 @@
      </header>   
         <!--====================== MAIN ======================-->
         <main>
-            <img src="assets/img/lol.jpg" alt="image">
-            <img src="assets/img/artlove.jpg" alt="">
+            <img src="assets/images/lol.jpg" alt="image">
+            <img src="assets/images/artlove.jpg" alt="">
             <div class="content">
                 <div>
                     <h1>
@@ -36,18 +36,18 @@
                         <div class="home__text" id="text-data">Days</div>
                     </h1>
                 </div>
-                <img src="assets/img/artlove.jpg" alt="">
+                <img src="assets/images/alotlove.jpg" alt="">
                 <p>
                     Counting down the minutes until I get to hold you again. ❤️
                     MY one beautiful señorita, mi corazón. Despertar sin ti es como 
-                    un cielo sin estrellas. Te amo con toda mi alma. I love more than anything in the world.
+                    un cielo sin estrellas. Te amo con toda mi alma. I you love more than anything in the world.
                     I can't wait to see you again. I am missing you like crazy.
                 </p>      
             </div>
         </main>
         <!--===================== FOOTER =====================-->
         <footer>
-            <img src="assets/img/leaflove.jpg" alt="">
+            <img src="assets/images/leaflove.jpg" alt="">
             copy right &copy; ligalah hezron
             
         </footer>
