correcting I love you

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p>
                     Counting down the minutes until I get to hold you again. ❤️
                     MY one beautiful señorita, mi corazón. Despertar sin ti es como 
-                    un cielo sin estrellas. Te amo con toda mi alma. I you love more than anything in the world.
+                    un cielo sin estrellas. Te amo con toda mi alma. I love you more than anything in the world.
                     I can't wait to see you again. I am missing you like crazy.
                 </p>      
             </div>
