--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </head>
     <body>
      <header>
-        <h1>A love letter to <strong>Mercy</strong>, the most beautiful girl in the world</h1>
+        <h1>A love letter to <strong>Mercy Odongo</strong>, the most beautiful girl in the world</h1>
      </header>   
         <!--====================== MAIN ======================-->
         <main>
